Text: ensure that the insertion index is valid.

The index defaults to -1 when there's no text.

BUG:479666