plugins/tools/svgtexttool/SvgTextInsertCommand.cpp
@@ -34,7 +34,8 @@ SvgTextInsertCommand::SvgTextInsertCommand(KoSvgTextShape *shape, int pos, int a
 void SvgTextInsertCommand::redo()
 {
     QRectF updateRect = m_shape->boundingRect();
-    int oldIndex = m_shape->indexForPos(m_pos);
+    // Index defaults to -1 when there's no text in the shape.
+    int oldIndex = qMax(0, m_shape->indexForPos(m_pos));
 
     KoSvgTextShapeMarkupConverter converter(m_shape);
     converter.convertToSvg(&m_oldSvg, &m_oldDefs);
